--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Nome: Kauâ Andreotti Gabriel                                   nº: 20        T
 
 <html lang="pt-BR">
 <head>
-<title>Imagem</title>
+<title>Jogo</title>
 <link rel="stylesheet" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto|Sirin+Stencil" rel="stylesheet">
 <meta charset="UTF-8">
@@ -21,7 +21,7 @@ border:1px solid #d3d3d3;
 background-color: #f1f1f1;
 }
 </style>
-<script src="nave.js"></script>
+<script src="jogosWeb.js"></script>
 
 
 </head>
