--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ background-color: #f1f1f1;
 </head>
 <body onload="startGame();">
     <img id="image" src="./img/naveheroi.png" style="display:none;">
+     <img id="image" src="./img/naveinimigo.png" style="display:none;">
+     <img id="image1" src="./img/praiacenario.png" style="display:none;">
 
 </body>
 </html>
